notebooks/jupyter.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  labels:
    app: notebook
    component: jupyter
spec:
  ports:
  - name: http
    port: 8888
    targetPort: 8888
  selector:
    app: notebook
    component: jupyter
