notebooks/zeppelin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeppelin
  labels:
    app: notebook
    component: zeppelin
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: notebook
    component: zeppelin
