notebooks/jupyter.ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter
  annotations:
    io.rancher.scheduler.affinity.host_label: "io.rahcnar.name=yaroshinskaya-alla"
    io.rahcnar.ip.external: 54.194.253.97
    config: |-
      global
        log-tag jupyter.wrrr.online
        log-send-hostname yaroshinskaya-alla
      defaults
        option httplog
        log graylog.udp.wrrr.online:10516 local0 debug
spec:
  tls:
   - secretName: jupyter.wrrr.online
  backend:
    serviceName: jupyter
    servicePort: 8888
